<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/button_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_one"
        android:textSize="32dp"
        app:layout_constraintBottom_toTopOf="@+id/button_four"
        app:layout_constraintEnd_toStartOf="@+id/button_two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_two"
        android:textSize="32dp"
        app:layout_constraintBottom_toTopOf="@+id/button_five"
        app:layout_constraintEnd_toStartOf="@+id/button_three"
        app:layout_constraintStart_toEndOf="@+id/button_one"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_three"
        android:textSize="32dp"
        app:layout_constraintBottom_toTopOf="@+id/button_six"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_two"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_four"
        android:textSize="32dp"
        app:layout_constraintBottom_toTopOf="@+id/button_seven"
        app:layout_constraintEnd_toStartOf="@+id/button_five"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_one" />

    <Button
        android:id="@+id/button_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_five"
        android:textSize="32dp"
        app:layout_constraintBottom_toTopOf="@+id/button_eight"
        app:layout_constraintEnd_toStartOf="@+id/button_six"
        app:layout_constraintStart_toEndOf="@+id/button_four"
        app:layout_constraintTop_toBottomOf="@+id/button_two" />

    <Button
        android:id="@+id/button_six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_six"
        android:textSize="32dp"
        app:layout_constraintBottom_toTopOf="@+id/button_nine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_five"
        app:layout_constraintTop_toBottomOf="@+id/button_three" />

    <Button
        android:id="@+id/button_seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_seven"
        android:textSize="32dp"
        app:layout_constraintBottom_toTopOf="@+id/button_decimal_separator"
        app:layout_constraintEnd_toStartOf="@+id/button_eight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_four" />

    <Button
        android:id="@+id/button_eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_eight"
        android:textSize="32dp"
        app:layout_constraintBottom_toTopOf="@+id/button_zero"
        app:layout_constraintEnd_toStartOf="@+id/button_nine"
        app:layout_constraintStart_toEndOf="@+id/button_seven"
        app:layout_constraintTop_toBottomOf="@+id/button_five" />

    <Button
        android:id="@+id/button_nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_nine"
        android:textSize="32dp"
        app:layout_constraintBottom_toTopOf="@+id/button_backspace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_eight"
        app:layout_constraintTop_toBottomOf="@+id/button_six" />

    <Button
        android:id="@+id/button_decimal_separator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_zero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_seven" />

    <Button
        android:id="@+id/button_zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_zero"
        android:textSize="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_backspace"
        app:layout_constraintStart_toEndOf="@+id/button_decimal_separator"
        app:layout_constraintTop_toBottomOf="@+id/button_eight" />

    <ImageButton
        android:id="@+id/button_backspace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_backspace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_zero"
        app:layout_constraintTop_toBottomOf="@+id/button_nine" />

</androidx.constraintlayout.widget.ConstraintLayout>




