<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_theme"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical"
        android:paddingStart="24dp"
        android:text="@string/theme"
        android:textColor="#000000"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E0E0E0" />

    <RadioGroup
        android:id="@+id/radio_group_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/container_theme_light"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="24dp">

            <RadioButton
                android:id="@+id/choice_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="36dp"
                android:layout_height="26dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/icon_theme_light" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:text="@string/light"
                android:textColor="#000000"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_theme_dark"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="24dp">

            <RadioButton
                android:id="@+id/choice_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="36dp"
                android:layout_height="26dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/icon_theme_dark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:text="@string/dark"
                android:textColor="#000000"
                android:textSize="16sp" />

        </LinearLayout>

    </RadioGroup>

</LinearLayout>