<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:elevation="24dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_language"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_vertical"
            android:paddingStart="24dp"
            android:text="@string/language"
            android:textColor="#000000"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E0E0E0" />

        <RadioGroup
            android:id="@+id/radio_group_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/choice_english"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <android.support.v7.widget.CardView
                    android:layout_width="36dp"
                    android:layout_height="26dp"
                    android:layout_marginStart="20dp"
                    app:cardCornerRadius="2dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/english" />

                </android.support.v7.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingStart="16dp"
                    android:text="@string/english"
                    android:textColor="#000000"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/choice_spanish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <android.support.v7.widget.CardView
                    android:layout_width="36dp"
                    android:layout_height="26dp"
                    android:layout_marginStart="20dp"
                    app:cardCornerRadius="2dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/spanish" />

                </android.support.v7.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingStart="16dp"
                    android:text="@string/spanish"
                    android:textColor="#000000"
                    android:textSize="16sp" />

            </LinearLayout>

        </RadioGroup>

    </LinearLayout>

</android.support.v7.widget.CardView>